fix there is a problem that the output is shows correctly on the vs code but in the github page section only the raw html is showing and css and images are not showing so i add a DOT (.) in front of every address

--- a/index.html
+++ b/index.html
@@ -4,13 +4,13 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Alankini</title>
-    <link rel="stylesheet" href="/Style/style.css" />
+    <link rel="stylesheet" href="./style/style.css" />
   </head>
   <body>
     <header>
       <div class="nav">
         <div class="logo">
-          <img src="/images/logo.jpg" alt="Business LOGO" />
+          <img src="./images/logo.jpg" alt="Business LOGO" />
         </div>
         <nav>
           <ul>
@@ -33,7 +33,7 @@
         </div>
         <div class="img">
           <img
-            src="/images/557984829_122122789736967391_2561647450860577220_n.jpg"
+            src="./images/557984829_122122789736967391_2561647450860577220_n.jpg"
             alt="Pics"
           />
         </div>
@@ -44,7 +44,7 @@
       <div class="container">
         <div class="item">
           <div class="itemimg">
-            <img src="/images/574858120_122128346696967391_2831281105308337110_n.jpg" alt="produch's Img">
+            <img src="./images/574858120_122128346696967391_2831281105308337110_n.jpg" alt="produch's Img">
           </div>
           <div class="itemdet">
             <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit.</p>
@@ -52,7 +52,7 @@
         </div>
         <div class="item">
           <div class="itemimg">
-            <img src="/images/582075387_122130122858967391_1421873524662069715_n.jpg" alt="produch's Img">
+            <img src="./images/582075387_122130122858967391_1421873524662069715_n.jpg" alt="produch's Img">
           </div>
           <div class="itemdet">
             <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit.</p>
@@ -60,7 +60,7 @@
         </div>
         <div class="item">
           <div class="itemimg">
-            <img src="/images/586828214_122130797498967391_1283840362384653484_n.jpg" alt="produch's Img">
+            <img src="./images/586828214_122130797498967391_1283840362384653484_n.jpg" alt="produch's Img">
           </div>
           <div class="itemdet">
             <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit.</p>
@@ -68,7 +68,7 @@
         </div>
         <div class="item">
           <div class="itemimg">
-            <img src="/images/590582945_122135720516967391_5860443060044513971_n.jpg" alt="produch's Img">
+            <img src="./images/590582945_122135720516967391_5860443060044513971_n.jpg" alt="produch's Img">
           </div>
           <div class="itemdet">
             <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit.</p>
